--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Clifford Luster</title>
 </head>
 <body>
-    <h1>Book Store</h1>
+    <h1>Book Store 1</h1>
 </body>
 <script src="app.js"></script>
 </html>
