--- a/index.html
+++ b/index.html
@@ -4,10 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Clifford Luster</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css" integrity="sha256-ECB9bbROLGm8wOoEbHcHRxlHgzGqYpDtNTgDTyDz0wg=" crossorigin="anonymous" />
+    <style>
+    .success, .error{
+        color: white;
+        padding: 5px;
+        margin: 5px 0 15px 0;
+    }
+    </style>
+    <title>book List</title>
 </head>
 <body>
-    <h1>Book Store 1</h1>
+    <div class="contianer">
+        <h1>Add Book</h1>
+        <form id="book-form">
+            <div>
+            <label for="title">Title</label>
+            <input type="text" id="title" class="u-full-width">
+        </div>
+        <div>
+            <label for="author">Author</label>
+            <input type="text" id="author" class="u-full-width">
+        </div>
+        <div>
+            <label for="isbn">ISBN#</label>
+            <input type="text" id="isbn" class="u-full-width">
+        </div>
+    </form>
+    <hr>
+    <table class="u-full-width">
+        <thead>
+
+            <tr>
+                <th>Title</th>
+                <th>Author</th>
+                <th>ISBN</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody id="book-list"></tbody>
+    </table>
+    </div>
 </body>
 <script src="app.js"></script>
 </html>
