--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css" integrity="sha256-ECB9bbROLGm8wOoEbHcHRxlHgzGqYpDtNTgDTyDz0wg=" crossorigin="anonymous" />
     <style>
+        body{
+           margin: 25px; 
+        }
     .success, .error{
         color: white;
         padding: 5px;
         margin: 5px 0 15px 0;
+    }
+
+    .success {
+        background: green;
+    }
+    .error{
+        background: red;
     }
     </style>
     <title>book List</title>
@@ -30,8 +40,10 @@
             <label for="isbn">ISBN#</label>
             <input type="text" id="isbn" class="u-full-width">
         </div>
+        <div>
+            <input type="submit" value="Submit" class="u-full-width">
+        </div>
     </form>
-    <hr>
     <table class="u-full-width">
         <thead>
 
