--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <title>book List</title>
 </head>
 <body>
-    <div class="contianer">
+    <div class="container">
         <h1>Add Book</h1>
         <form id="book-form">
             <div>
